k8s/aut-sys/apps/taskchampion-sync-server/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskchampion-sync-server
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: >-
      traefik-compress@kubernetescrd,
      traefik-redirect-tls@kubernetescrd,
      traefik-secure-headers@kubernetescrd
spec:
  tls:
    - secretName: tls-task-sync.aut-sys.de
      hosts: [ task-sync.aut-sys.de ]
  rules:
    - host: task-sync.aut-sys.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taskchampion-sync-server
                port:
                  name: http
